--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
   },
   "dependencies": {
     "@sapphire/framework": "^5.5.0",
+    "@sapphire/plugin-hmr": "^3.0.2",
+    "@sapphire/plugin-i18next": "^8.0.0",
+    "@sapphire/plugin-logger": "^4.1.0",
     "discord.js": "^14.25.1",
     "dotenv": "^17.2.3",
     "drizzle-orm": "^0.45.1",
