feat: add Docker support and improve project configuration
- Implement Dockerfile for multi-stage build of the bot application.
- Create docker-compose.yml for production setup with PostgreSQL.
- Add docker-compose.dev.yml for local development with PostgreSQL.
- Introduce .dockerignore to exclude unnecessary files from Docker context.
- Add .env.docker for environment variables specific to Docker.
- Set up ESLint and Prettier configurations with .eslintrc.js and .prettierrc.
- Create .editorconfig for consistent coding styles across editors.
- Add VSCode settings and recommended extensions for better development experience.
- Update package.json with new scripts for linting, formatting, and Docker commands.
- Add necessary dependencies for TypeScript, ESLint, and Prettier.
- Create .sapphirerc.yml for Sapphire framework configuration.

--- a/.env.example
+++ b/.env.example
@@ -1,20 +1,55 @@
-# Example environment variables
-## Copy this file to .env and fill in the values
+# ========================================
+# Tatiana Bot - Environment Configuration
+# ========================================
+# Copy this file to .env and fill in your values
+# NEVER commit the .env file to version control!
 
-### Database configuration
-DATABASE_URL=
+# ========================================
+# Discord Bot Configuration
+# ========================================
+# Your Discord bot token from https://discord.com/developers/applications
+# Required: Yes
+DISCORD_BOT_TOKEN=your_bot_token_here
 
-### API configuration
-API_KEY=
+# Your Discord application client ID
+# Required: Yes (for slash commands)
+DISCORD_CLIENT_ID=your_client_id_here
 
-### Discord configuration
-DISCORD_TOKEN=
-DISCORD_SECRET=
-DISCORD_ClIENT_ID=
+# Your Discord application client secret
+# Required: No (only if using OAuth2)
+DISCORD_CLIENT_SECRET=your_client_secret_here
 
-### Admin configuration
-ADMIN_EMAIL=
-ADMIN_CLIENT_ID=
+# Guild ID for development/testing (faster command registration)
+# Required: No (leave empty for global commands)
+# DISCORD_DEV_GUILD_ID=your_dev_guild_id_here
 
-### Application configuration
-PORT=3000
+# ========================================
+# Database Configuration
+# ========================================
+# PostgreSQL connection string
+# For Docker: postgresql://postgres:postgres@localhost:5432/tatiana_bot_dev
+# For local: postgresql://username:password@localhost:5432/tatiana_bot
+# Required: Yes
+DATABASE_URL=postgresql://postgres:postgres@localhost:5432/tatiana_bot_dev
+
+# ========================================
+# Logging Configuration
+# ========================================
+# Log level: debug, info, warn, error
+# Default: info
+LOG_LEVEL=info
+
+# ========================================
+# Application Configuration
+# ========================================
+# Node environment: development, production
+# Default: development
+NODE_ENV=development
+
+# Owner IDs (comma-separated Discord user IDs for bot admin commands)
+# Required: No
+# OWNER_IDS=123456789012345678,987654321098765432
+
+# Default language for i18next
+# Default: en-US
+DEFAULT_LANGUAGE=en-US
