--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,10 @@ report.[0-9]_.[0-9]_.[0-9]_.[0-9]_.json
 
 # Finder (MacOS) folder config
 .DS_Store
+
+# Drizzle migrations
+drizzle/
+
+# Docker volumes
+postgres_data/
+postgres_dev_data/
