--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "discord.js": "^14.25.1",
     "dotenv": "^17.2.3",
     "drizzle-orm": "^0.45.1",
-    "pg": "^8.17.2"
+    "pg": "^8.17.2",
+    "postgres": "^3.4.8"
   }
 }
