--- a/.env.docker.example
+++ b/.env.docker.example
@@ -4,7 +4,7 @@
 # PostgreSQL connection details
 DB_USER=postgres
 DB_PASSWORD=postgres
-DB_NAME=tatiana_bot
+DB_NAME=tatiana_bot_dev
 DB_PORT=5432
 
 # ========================================
