--- a/.sapphirerc.yml
+++ b/.sapphirerc.yml
@@ -7,6 +7,7 @@ locations:
   preconditions: preconditions
   interaction-handlers: interaction-handlers
   routes: ''
+  languages: ../languages
 customFileTemplates:
   enabled: false
   location: ''
