feat: Add embed management commands and variable utilities
- Implemented embed creation, listing, showing, and deletion commands.
- Added modal for embed creation with user input fields.
- Introduced variable parsing utilities for dynamic message content.
- Updated issue templates for bug reports, command requests, and feature requests.
- Enhanced README with setup instructions and usage examples.
- Added database schema for storing custom embeds.
- Integrated new commands into the bot's command structure.

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -12,11 +12,11 @@ services:
       POSTGRES_DB: tatiana_bot_dev
       PGDATA: /var/lib/postgresql/data/pgdata
     ports:
-      - "5432:5432"
+      - '5432:5432'
     volumes:
       - postgres_dev_data:/var/lib/postgresql/data
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      test: ['CMD-SHELL', 'pg_isready -U postgres']
       interval: 10s
       timeout: 5s
       retries: 5
