--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@sapphire/plugin-hmr": "^3.0.2",
     "@sapphire/plugin-i18next": "^8.0.0",
     "@sapphire/plugin-logger": "^4.1.0",
+    "@sapphire/plugin-subcommands": "^7.0.1",
     "discord.js": "^14.25.1",
     "dotenv": "^17.2.3",
     "drizzle-orm": "^0.45.1",
